<resources>
    <string name="app_name">Halp</string>
    <string name="action_settings">Settings</string>

    <!-- Registration-->
    <string name="name_hint">Name</string>
    <string name="email_hint">E-mail</string>
    <string name="phone_hint">Phone</string>
    <string name="password_hint">Password</string>
    <string name="to_sign_in">I have account</string>
    <string name="reg_button">Sing up</string>
    <string name="social">Through social networks</string>
    <string name="google">social_net_1</string>
    <string name="icq">social_net_2</string>
    <string name="registration_title">Sign Up</string>

    <!--Login-->
    <string name="login_title">Login</string>
    <string name="login_name_hint">E-mail</string>
    <string name="password_reminder">Forgot my password</string>
    <string name="login_button">Login</string>
    <string name="password_restore_title">Password restore</string>
    <string name="restore_button">Restore</string>
    <string name="password_restore_text">Enter your e-mail so we can send you password reset instructions</string>
    <string name="password_restore_text_finish">Instructions were sent to your email</string>
    <string name="password_restore_finish_return_button">Return to Login</string>
    <string name="quest_description">fffffffffffffffffffgffffffffffffffffffffffffffffffffffgffffffffffffffffffffffffffffffffffgffffffffffffffffffffffffffffffffffgffffffffffffffffffffffffffffffffffgffffffffffffffffffffffffffffffffffgffffffffffffffffffffffffffffffffffgffffffffffffffffffffffffffffffffffgffffffffffffffffffffffffffffffffffgffffffffffffffffffffffffffffffffffgffffffffffffffffffffffffffffffffffgffffffffffffffffffffffffffffffffffgffffffffffffffffffffffffffffffffffgffffffffffffffffffffffffffffffffffgffffffffffffffffffffffffffffffffffgffffffffffffffffffffffffffffffffffgffffffffffffffffffffffffffffffffffgffffffffffffffffffffffffffffffffffgffffffffffffffffffffffffffffffffffgffffffffffffffffffffffffffffffffffgffffffffffffffffffffffffffffffffffgffffffffffffffffffffffffffffffffffgffffffffffffffffffffffffffffffffffgffffffffffffffffffffffffffffffffffgffffffffffffffffffffffffffffffffffgffffffffffffffffffffffffffffffffffgffffffffffffffffffffffffffffffffffgffffffffffffffffffffffffffffffffffgffffffffffffffffffffffffffffffffffgffffffffffffffffffffffffffffffffffgffffffffffffffffffffffffffffffffffgffffffffffffffffffffffffffffffffffgffffffffffffffffffffffffffffffffffgffffffffffffffffffffffffffgfffffffffffffffffffffff</string>
    <string name="quest_contacts_title">Contacts</string>
    <string name="quest_phone"><![CDATA[+&(&&&)&&&&&&&]]></string>
    <string name="quest_address">ETU</string>
    <string name="quest_reserve_button">Reserve</string>
    <string name="quest_company_name">Company  </string>
    <string name="quest_name">Quest</string>
    <string name="quest_people_number">6–10</string>
    <string name="quest_duration">55 min</string>
    <string name="quest_difficutly">INSANE</string>
    <string name="loading_text">Time to sign up</string>
    <string name="loading_image_cd">Looking…</string>
    <string name="quest_image_cd">image</string>
    <string name="quest_list_name_hint">Quest name</string>
    <string name="filter_genres_hint">City</string>
    <string name="filter_price">Price</string>
    <string name="filter_people_num">People number</string>
    <string name="filter_people_min_number">1</string>
    <string name="filter_people_max_number">99</string>
    <string name="filter_duration_min">15</string>
    <string name="filter_duration_max">72</string>
    <string name="filter_reset_button">Reset</string>
    <string name="filter_search_button">Search</string>
    <string name="quest_card_price">"Price: "</string>
    <string name="booking_quest_title">Title</string>
    <string name="booking_quest_people">Number of persons</string>
    <string name="booking_comment">Comment</string>
    <string name="booking_button">Reserve</string>
    <string name="booking_price_title">Price:   </string>
    <string name="booking_price_placeholed">1500 per person</string>
    <string name="booking_license_agreement">Accept license agreement</string>
    <string name="map_button">More</string>
    <string name="map_quest_name">QuestName</string>
    <string name="reserved_list_active">Active</string>
    <string name="reserved_list_done">Done</string>
    <string name="reserved_item_title">Reservation number</string>
    <string name="reserved_item_number">0</string>
    <string name="reserved_order_date">01.01.1970</string>
    <string name="reserved_item_reservation_time_label">Quest date</string>
    <string name="reserved_item_reservation_time">05.05.05</string>
    <string name="reserved_item_people_label">Number of persons</string>
    <string name="reserved_item_people">0</string>
    <string name="reserved_item_price_label">Price</string>
    <string name="reserved_item_price">-1</string>
    <string name="reserved_item_order_status_label">Status</string>
    <string name="reserved_item_order_status"> Ded</string>
    <string name="reserved_item_details">Details</string>
    <string name="reserved_item_cancel">Cancel</string>
    <string name="profile_title">Me</string>
    <string name="profile_account_settings">Account settings</string>
    <string name="profile_preferences">Preferences</string>
    <string name="profile_about">About</string>
    <string name="profile_logout">logout</string>
    <string name="profile_nickname">Hooman</string>
    <string name="success_label">Success</string>
    <string name="success_to_orders">To orders</string>
    <string name="success_to_pay">Proceed to payment details</string>
    <string name="success_image">image</string>
    <string name="reserved_item_payment">Pay</string>
    <string name="payment_page_quest_name">0000 0000 0000 0000</string>
    <string name="payment_page_card_name">Name on card</string>
    <string name="payment_page_card_date">MM/YY</string>
    <string name="payment_page_card_cvc">CVC</string>
    <string name="payment_page_save_card">Save card</string>
    <string name="payment_page_pay">Pay</string>
    <string name="preferences_notifications">Notifications</string>
    <string name="preferences_notifications_something">Something</string>
    <string name="preferences_notifications_reservation">Reservation status</string>
    <string name="preferences_notifications_quests">New quests</string>
    <string name="account_settings_personal_info">Pesronal info</string>
    <string name="account_settings_name">Full name</string>
    <string name="account_settings_email">E-mail</string>
    <string name="account_settings_phone">Phone</string>
    <string name="account_settings_birthday">Birthday (dd-mm-yyyy)</string>
    <string name="account_settings_security">Security</string>
    <string name="account_settings_password">Password</string>
    <string name="account_settings_old_password">Old password</string>
    <string name="account_settings_change">Change</string>
    <string name="bottom_toolbar_search">Search</string>
    <string name="bottom_toolbar_map">Map</string>
    <string name="bottom_toolbar_quests">Quests</string>
    <string name="bottom_toolbar_account">Account</string>
    <string name="top_bar_arrow_left"><![CDATA[<]]></string>
    <string name="top_bar_title">top_bar_title</string>

    <!-- Bottom navigation bar -->
    <string name="search">Search</string>
    <string name="map">Map</string>
    <string name="reserved">Reserved</string>
    <string name="favourites">Liked</string>
    <string name="profile">Profile</string>

    <!--New user page-->
    <string name="newuser_label">Hello</string>
    <string name="newuser_signup">Sign up</string>
    <string name="newuser_enter">Sign in</string>

    <string name="quest_list_button">Filter</string>
    <string name="quest_item_button">More information</string>

    <string name="about_label">Strawberry milk!</string>
    <string name="quest_item_like">Like</string>

    <!-- Map errors-->
    <string name="not_found_error_message">Not found</string>
    <string name="network_error_message">Network error</string>
    <string name="remote_error_message">Remote server error</string>
    <string name="unknown_error_message">Unknown error</string>
    <string name="item_order_quest_label">"Quest: "</string>
    <string name="item_order_comment_label">"Comment: "</string>
    <string name="filter_difficulty_label">Difficulty</string>
    <string name="filter_genre">Genre</string>
    <string name="filter_duration">Duration</string>
    <string name="quest_item_genre_label">Genre</string>
</resources>
