<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuestCardFragment">

    <!-- TOOLBAR -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/quest_image_cd"
                    android:gravity="center"
                    android:src="@drawable/gin"
                    android:scaleType="centerInside">
                    <!-- Something -->
                </ImageView>

                <include layout="@layout/include_quest_main_info"/>

                <TextView
                    android:id="@+id/quest_card_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/quest_description"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/quest_contacts_title"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/quest_card_phone"
                    android:text="@string/quest_phone"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/quest_card_address"
                    android:text="@string/quest_address"/>

                <Button
                    android:id="@+id/quest_card_map_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="display address on map"/>

                <Button
                    android:id="@+id/quest_card_booking_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/quest_reserve_button"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>